# dotfiles

./: .Xresources  .bash_profile  .bashrc  .chezmoi.toml.tmpl  .chezmoiignore  .fonts.conf  .gitattributes  .gitconfig  .gitignore  .gitignore_global  .latexmkrc  .less  .maximarc  .minttyrc  .nix-channels  .pylintrc  .pythonrc  .spacemacs  .tmux.conf  .tmux.conf.sh  .viminfo  .xmaximarc  LICENSE.txt  README.md  _curlrc  build.nix  default.nix  dot_bash_profile  dot_bashrc_brandeis.sh  dot_curlrc  dot_fonts.conf.tmpl  dot_gitattributes_global  dot_gitconfig  dot_gitconfig.tmpl  dot_gitignore_global  dot_lesskey  dot_pinforc  dot_pythonrc  dot_spacemacs  dot_tmux.conf  (+24 more)
.config/: breezerc  kdeglobals  kglobalshortcutsrc  khotkeysrc  kscreenlockerrc  mimeapps.list  plasmarc  spectaclerc  syncthingtray.ini  user-dirs.dirs
.config/alacritty/: alacritty.yml
.config/fish/: config.fish  fishfile
.config/fisher/: fishfile
.ptpython/: config.py
.ssh/: github_rsa  github_rsa.pub  known_hosts
.stack/: config.yaml
claude/: CLAUDE.md  settings.json
config/: topgrade.toml
dot_stack/: config.yaml
gp/: backup.ps1  machine-gp.xml  restore.ps1  setup.ps1
link_dotfiles/: __init__.py  __main__.py  actions.py  link.py  log.py  prompt.py  resolver.py  scan.py  schema.py
linux/: README.md
macos/: README.md
maxima/: maxima-init.mac
private_dot_cargo/: private_credentials.tmpl
private_dot_config/: kcminputrc  kglobalshortcutsrc  khotkeysrc  kscreenlockerrc  plasmarc  private_hub.tmpl  topgrade.toml
scripts/: mypy.ini  pyproject.toml
ssh/: config
(+304 files in other folders)
