[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "link_dotfiles"
author = "Rebecca Turner"
author-email = "rbt@sent.as"
home-page = "https://github.com/9999years/dotfiles"
classifiers = ["License :: OSI Approved :: MIT License"]

[tool.flit.scripts]
link_dotfiles = "link_dotfiles"

